# Wind-Turbine-Synthetic-Vision

./: .gitignore  README.md
.github/workflows/: static.yml
interactive_frontend/: README.md  app.js  convert_to_onnx.py  index.html  main.py  styles.css
toolbox/: README.md  example_config.yaml  example_dev.py  example_usage.py  requirements.txt
toolbox/lib/: config.yaml  pyproject.toml
toolbox/lib/src/wind_turbine_synthetic_vision/: config.yaml  config_validator.py  generator.py  helper.py
ultralytics_extensions/utils/: README.md  loss.py  metrics.py
wea_keypoint_model/: train.py
wea_keypoint_model/validation/: config.yaml  validate.py
